[tool.poetry]
name = "say11"
version = "0.1.0"
description = "Eleven Labs' CLI for streaming TTS"
authors = ["Jason <jason@jxnl.co>"]
license = "MIT"
readme = "README.md"
packages = [{include = "say11"}]
repository = "https://github.com/jxnl/say11"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.9.0"
elevenlabs = "^0.2.24"
rich = "^13.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
say11 = 'say11.cli:app'